istio-manifests/istio-gateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hipster-api
spec:
  gateways:
  - api-gateway
  hosts:
    - "*"    
  http:
  - match:
    - uri: 
        prefix: "/currencyservice"
    route:
    - destination:
        host: currencyservice
        port:
          number: 8080
  - match:
    - uri: 
        prefix: "/productcatalogservice"
    route:
    - destination:
        host: productcatalogservice
        port:
          number: 8080      
  - match:
    - uri: 
        prefix: "/recommendationservice"
    route:
    - destination:
        host: recommendationservice
        port:
          number: 8080        
  - match:
    - uri: 
        prefix: "/"               
    # rewrite:
    #   uri: "/"        
    route:
    - destination:
        host: frontend
        port:
          number: 8080                 
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: whitelist-egress-googleapis
spec:
  hosts:
  - "accounts.google.com" # Used to get token
  - "*.googleapis.com"
  ports:
  - number: 80
    protocol: HTTP
    name: http
  - number: 443
    protocol: HTTPS
    name: https
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: whitelist-egress-google-metadata
spec:
  hosts:
  - metadata.google.internal
  addresses:
  - 169.254.169.254 # GCE metadata server
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
